# nic2markdown

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install-gitee.ps1  install-gitee.sh  install.ps1  install.sh  pyproject.toml
skill/: SKILL.md
src/nic2markdown/: __init__.py  cli.py  converter.py  extractor.py  fetcher.py  gateway.py  validator.py  writer.py
src/nic2markdown/frameworks/: base.py
src/nic2markdown/frameworks/mkdocs_material/: converter.py  extractor.py  sidebar.py  validator.py
tests/: test_converter.py  test_extractor.py  test_gateway.py  test_validator.py
tests/frameworks/mkdocs_material/: test_converter.py  test_extractor.py  test_sidebar.py  test_validator.py
